# modeller

./: .gitignore  Cargo.toml  Makefile  README.md
crates/brep-algo/: Cargo.toml
crates/brep-algo/src/: bvh.rs  intersect.rs  lib.rs  query.rs
crates/brep-app/: Cargo.toml
crates/brep-app/src/: commands.rs  editor.rs  gizmo.rs  icons.rs  main.rs  toolbar.rs  toolbar_defs.rs  ui.rs
crates/brep-app/src/profile_shapes/: arc.rs  circle.rs  mod.rs  polyline.rs
crates/brep-app/src/sketch_tools/: README.md  arc.rs  circle.rs  mod.rs  pointer.rs  polyline.rs  rectangle.rs
crates/brep-app/src/ui/: constraint_helpers.rs  mod.rs  modals.rs  overlay.rs  panel.rs
crates/brep-app/src/ui/panel/: constraints.rs  elements.rs  history.rs  mod.rs
crates/brep-bool/: Cargo.toml
crates/brep-bool/src/: lib.rs
crates/brep-config/: Cargo.toml
crates/brep-config/src/: lib.rs
crates/brep-core/: Cargo.toml
crates/brep-core/src/: error.rs  id.rs  lib.rs  math.rs  tolerance.rs
crates/brep-geom/: Cargo.toml
crates/brep-geom/src/: curve.rs  lib.rs  surface.rs  traits.rs
crates/brep-io/: Cargo.toml
crates/brep-io/src/: lib.rs  step.rs  stl.rs
crates/brep-mesh/: Cargo.toml
crates/brep-mesh/src/: lib.rs
crates/brep-param/: Cargo.toml
crates/brep-param/src/: lib.rs
crates/brep-render/: Cargo.toml
crates/brep-render/examples/: renders.rs
crates/brep-render/src/: gpu.rs  lib.rs
crates/brep-sketch/: Cargo.toml
crates/brep-sketch/benches/: solver.rs
crates/brep-sketch/src/: arc.rs  constraints.rs  geometry.rs  lib.rs  profile.rs  sketch.rs  solver.rs
crates/brep-sketch/tests/: sketch_tests.rs
crates/brep-topo/: Cargo.toml
crates/brep-topo/src/: binding.rs  entity.rs  euler.rs  lib.rs  primitives.rs  store.rs  validate.rs
docs/: constraints.md
