[package]
name = "brep-algo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
brep-core.workspace = true
brep-geom.workspace = true
brep-topo.workspace = true
brep-mesh.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
approx.workspace = true
rayon.workspace = true

[dev-dependencies]
approx.workspace = true
