[package]
name = "brep-param"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
brep-core.workspace = true
brep-geom.workspace = true
brep-topo.workspace = true
brep-algo.workspace = true
brep-bool.workspace = true
nalgebra.workspace = true
slotmap.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
approx.workspace = true
