[package]
name = "brep-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
window = ["dep:winit", "dep:wgpu", "dep:bytemuck"]

[dependencies]
brep-core.workspace = true
brep-geom.workspace = true
brep-topo.workspace = true
brep-mesh.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
png = "0.17"
# These are declared directly (not via workspace) because workspace deps
# cannot be marked optional at the workspace level.
wgpu = { version = "23", optional = true }
winit = { version = "0.30", optional = true }
bytemuck = { version = "1.19", features = ["derive"], optional = true }

[dev-dependencies]
approx.workspace = true
