[package]
name = "brep-sketch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nalgebra.workspace = true
faer.workspace = true
rayon.workspace = true
thiserror.workspace = true
serde = { workspace = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "solver"
harness = false
