[package]
name = "brep-topo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
brep-core.workspace = true
brep-geom.workspace = true
nalgebra.workspace = true
slotmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true
serde.workspace = true
approx.workspace = true

[dev-dependencies]
approx.workspace = true
